# llvm-mem-opt-pass

./: .gitignore  Apple.cpp  CMakeLists.txt  MemOpt.cpp  README.md  build.sh  old.cpp  pass.sh
src/: MemOpt.cpp  MemOpt.h  Pass.cpp
tests/: attributes.c  bb-five.c  bb-four.c  bb-six.c  bb-three.c  branch-weights.c  comp-llvm.sh  main.c  mem-test.c  no-opt-many.c  no-opt-three.c  no-opt.c  opt-many-two.c  opt.c  test.c  vec-no-opt.c  vec.c
tests/IR/: attributes.ll  bb-eight.ll  bb-five.ll  bb-four.ll  bb-six.ll  bb-three.ll  bb-two.ll  bb.ll  br.ll  branch-weights.ll  main-test-two.ll  main-test.ll  mem-test.ll  no-bb-eight.ll  no-bb-seven.ll  no-failed-one.ll  no-intrinsic.ll  no-opt-many.ll  no-opt-three.ll  no-opt-two.ll  no-opt-vec.ll  no-opt.ll  no-phi-two.ll  no-phi.ll  no-test.ll  opt-many-three.ll  opt-many-two.ll  opt-many.ll  opt-two.ll  opt.ll  phi.ll  test.ll  vec-no-opt.ll  vec.ll
tests/IROptimized/: bb-eight.ll  bb-five.ll  bb-four.ll  bb-seven.ll  bb-six.ll  bb-three.ll  bb-two.ll  bb.ll  failed_one.ll  main-test-two.ll  main-test.ll  no-bb-eight.ll  no-bb-five.ll  no-bb-seven.ll  no-failed-one.ll  no-failed_one.ll  no-intrinsic.ll  no-opt-many.ll  no-opt-three.ll  no-opt-two.ll  no-opt-vec.ll  no-opt.ll  no-phi-two.ll  no-phi.ll  no-test.ll  opt-many-three.ll  opt-many-two.ll  opt-many.ll  opt-two.ll  opt.ll  phi-two.ll  phi.ll  test.ll  vec-no-opt.ll  vec.ll
tests/c-sources/: bb-seven.c  main-test-two.c  no-bb-eight.c  no-opt-two.c  no-opt.c  no-test.c  opt-many-three.c  opt-many.c  opt-two.c  opt.c
